--- a/skill-test.html
+++ b/skill-test.html
@@ -14,71 +14,46 @@
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6433fc8980.js" crossorigin="anonymous"></script>
-    <style>
-        .icon-to-heading {
-            padding-right: 3px;
-            display: inline;
-        }
-
-
-        a.skill-title {
-            font-family: "Roboto", sans-serif;
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 0;
-            padding-bottom: 0;
-        }
-
-        p.skill-info {
-            font-style: italic;
-            margin-top: 0;
-            padding-top: 0;
-        }
-
-        div.collapse-button {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            -webkit-justify-content: flex-end;
-            -webkit-align-items: center;
-        }
-
-        .card-header {
-            background: #fff;
-        }
-
-        .card {
-            border: none;
-        }
-
-        .card-body {
-            margin-bottom: 0;
-            padding-bottom: 0;
-        }
-
-        div.skill-body {
-            margin-top: 1.5rem;
-        }
-
-        div.proficiency {
-            background: -webkit-linear-gradient(left, #b7950b, #d4ac0d, #f1c40f, #f4d03f);
-            width: 30%;
-            color: #000;
-        }
-
-        p.skill-highlights {
-            margin-top: 0.5rem;
-            font-size: 14px;
-            font-family: "Helvetica Neue", sans-serif;
-        }
-
-        div.proficiency-bar-and-text {
-            text-align: center;
-            width: 30%;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
+<div class="navigation-pills-inside-skills">
+    <ul class="nav nav-pills nav-justified" id="pills-tab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="pills-coding-tab" data-toggle="pill" href="#pills-coding"
+               role="tab"
+               aria-controls="pills-coding" aria-selected="true">
+                <i class="fas fa-code"></i>
+                <div class="icon-to-heading"></div>
+                Coding
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="pills-languages-tab" data-toggle="pill" href="#pills-languages"
+               role="tab"
+               aria-controls="pills-languages" aria-selected="false">
+                <i class="fas fa-language"></i>
+                <div class="icon-to-heading"></div>
+                Languages
+            </a>
+        </li>
+    </ul>
+</div>
+
+
+
+<div class="tab-content" id="pills-tabContent">
+    <div class="tab-pane fade show active" id="pills-coding" role="tabpanel" aria-labelledby="pills-coding-tab">
+        Fuck
+    </div>
+
+    <div class="tab-pane fade" id="pills-languages" role="tabpanel" aria-labelledby="pills-languages-tab">
+        me
+    </div>
+</div>
+
+
 
 <div class="skill-body">
     <div class="accordion" id="accordionExample">
@@ -95,7 +70,7 @@
                             <p class="small skill-info">
                                 A concurrent, class-based, statically typed object-oriented
                                 language.
-                            </p>>
+                            </p>
                         </div>
                         <div class="col-6 collapse-button">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
@@ -132,6 +107,8 @@
                 </div>
             </div>
         </div>
+
+        <hr>
 
         <!-- Python -->
         <div class="card">
@@ -182,30 +159,201 @@
             </div>
         </div>
 
+        <hr>
 
-        
+        <!-- C/C++ -->
         <div class="card">
             <div class="card-header" id="headingThree">
-                <h2 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                            data-target="#collapseThree"
-                            aria-expanded="false" aria-controls="collapseThree">
-                        Collapsible Group Item #3
-                    </button>
-                </h2>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-6">
+                            <a class="skill-title">
+                                <i class="fab fa-cuttlefish"></i>
+                                <div class="icon-to-heading"></div>
+                                C / C++
+                            </a>
+                            <p class="small skill-info">
+                                A general purpose system programming language.
+                            </p>
+                        </div>
+                        <div class="col-6 collapse-button">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseThree" title="Click to expand"
+                                    aria-expanded="false" aria-controls="collapseThree">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                 data-parent="#accordionExample">
                 <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                    wolf
-                    moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                    eiusmod.
-                    Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-                    shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente
-                    ea
-                    proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
-                    denim
-                    aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <div class="proficiency-bar-and-text">
+                        <div class="progress">
+                            <div class="progress-bar proficiency" role="progressbar" style="width: 70%"
+                                 aria-valuenow="70" title="Proficiency level"
+                                 aria-valuemin="0" aria-valuemax="100">
+                                Proficiency
+                            </div>
+                        </div>
+                        <p class="small font-weight-bold font-italic">Basic</p>
+                    </div>
+                    <div>
+                        <p class="skill-highlights">
+                            Well versed in concepts of the language <br/>
+                            <b>Competitive Coding</b><br/>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <!-- HTML, CSS, JS -->
+        <div class="card">
+            <div class="card-header" id="headingFour">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-6">
+                            <a class="skill-title">
+                                <i class="fas fa-file-code"></i>
+                                <div class="icon-to-heading"></div>
+                                HTML, CSS and JavaScript
+                            </a>
+                            <p class="small skill-info">
+                                The languages that make up the web.
+                            </p>
+                        </div>
+                        <div class="col-6 collapse-button">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseFour" title="Click to expand"
+                                    aria-expanded="false" aria-controls="collapseFour">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+                 data-parent="#accordionExample">
+                <div class="card-body">
+                    <div class="proficiency-bar-and-text">
+                        <div class="progress">
+                            <div class="progress-bar proficiency" role="progressbar" style="width: 80%"
+                                 aria-valuenow="80" title="Proficiency level"
+                                 aria-valuemin="0" aria-valuemax="100">
+                                Proficiency
+                            </div>
+                        </div>
+                        <p class="small font-weight-bold font-italic">Intermediate</p>
+                    </div>
+                    <div>
+                        <p class="skill-highlights">
+                            Made many websites using <b>HTML, CSS, Js</b> with Node, PHP and Flask backends <br/>
+                            Well versed in <b>Bootstrap</b> <br/>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <!-- PHP -->
+        <div class="card">
+            <div class="card-header" id="headingFive">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-6">
+                            <a class="skill-title">
+                                <i class="fab fa-php"></i>
+                                <div class="icon-to-heading"></div>
+                                PHP
+                            </a>
+                            <p class="small skill-info">
+                                A popular general-purpose scripting language.
+                            </p>
+                        </div>
+                        <div class="col-6 collapse-button">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseFive" title="Click to expand"
+                                    aria-expanded="false" aria-controls="collapseFive">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
+                 data-parent="#accordionExample">
+                <div class="card-body">
+                    <div class="proficiency-bar-and-text">
+                        <div class="progress">
+                            <div class="progress-bar proficiency" role="progressbar" style="width: 80%"
+                                 aria-valuenow="80" title="Proficiency level"
+                                 aria-valuemin="0" aria-valuemax="100">
+                                Proficiency
+                            </div>
+                        </div>
+                        <p class="small font-weight-bold font-italic">Intermediate</p>
+                    </div>
+                    <div>
+                        <p class="skill-highlights">
+                            Backend knowledge of using a PHP Server <br/>
+                            Connected the fronted to a MySQL database using a PHP Backend <br/>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <!-- SQL -->
+        <div class="card">
+            <div class="card-header" id="headingSix">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-6">
+                            <a class="skill-title">
+                                <i class="fas fa-database"></i>
+                                <div class="icon-to-heading"></div>
+                                SQL
+                            </a>
+                            <p class="small skill-info">
+                                Language of the relational databases.
+                            </p>
+                        </div>
+                        <div class="col-6 collapse-button">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseSix" title="Click to expand"
+                                    aria-expanded="false" aria-controls="collapseSix">
+                                <i class="fas fa-plus"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="collapseSix" class="collapse" aria-labelledby="headingSix"
+                 data-parent="#accordionExample">
+                <div class="card-body">
+                    <div class="proficiency-bar-and-text">
+                        <div class="progress">
+                            <div class="progress-bar proficiency" role="progressbar" style="width: 70%"
+                                 aria-valuenow="70" title="Proficiency level"
+                                 aria-valuemin="0" aria-valuemax="100">
+                                Proficiency
+                            </div>
+                        </div>
+                        <p class="small font-weight-bold font-italic">Basic</p>
+                    </div>
+                    <div>
+                        <p class="skill-highlights">
+                            Worked with many relational databases - <b>MySQL</b>, <b>SQLPlus</b> and <b>SQLite</b>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
