--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6433fc8980.js" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -164,6 +163,7 @@
             <div class="row">
                 <div class="col-sm-1 col-md-2 col-lg-2"></div>
                 <div class="col-sm-10 col-md-8 col-lg-8">
+                    <div class="breaker"></div>
                     <!-- fixme changes -->
                     <div class="row">
                         <div class="col-4"></div>
@@ -533,7 +533,85 @@
 
                         <div class="tab-pane fade" id="pills-languages" role="tabpanel"
                              aria-labelledby="pills-languages-tab">
-                            me
+                            <!-- Languages Here -->
+                            <div class="skill-body">
+                                <div class="accordion" id="accordionExample1">
+                                    <!-- English -->
+                                    <div class="card">
+                                        <div class="card-header" id="headingOne1">
+                                            <div class="container-fluid">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <a class="skill-title">
+                                                            English
+                                                        </a>
+                                                        <p class="small skill-info">
+                                                            Bilingual
+                                                        </p>
+                                                    </div>
+                                                    <div class="col-6 collapse-button">
+                                                        <p class="language-hello"> Hello</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <hr>
+
+                                    <!-- Hindi -->
+                                    <div class="card">
+                                        <div class="card-header" id="headingTwo1">
+                                            <div class="container-fluid">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <a class="skill-title">
+                                                            Hindi
+                                                        </a>
+                                                        <p class="small skill-info">
+                                                            Native
+                                                        </p>
+                                                        <p class="small skill-info">
+                                                            मातृ भाषा
+                                                        </p>
+                                                    </div>
+                                                    <div class="col-6 collapse-button">
+                                                        <p class="language-hello">नमस्ते</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <hr>
+
+                                    <!-- German -->
+                                    <div class="card">
+                                        <div class="card-header" id="headingThree1">
+                                            <div class="container-fluid">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <a class="skill-title">
+                                                            German
+                                                        </a>
+                                                        <p class="small skill-info">
+                                                            Elementary - Reading, Spoken and Written
+                                                        </p>
+                                                        <p class="small skill-info">
+                                                            Grundstufe - Lesen, Sprechen und Schreiben
+                                                        </p>
+                                                    </div>
+                                                    <div class="col-6 collapse-button">
+                                                        <p class="language-hello">Guten Tag</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!-- Languages Here -->
                         </div>
                     </div>
                     <!-- fixme Skills here -->
