Starting on projects tab

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
 <!-- Navbar -->
 <div class="container-fluid">
     <div class="row">
@@ -96,9 +97,9 @@
 
 <div class="tab-content" id="pills-tabContent">
     <!-- FIXME add show active here -->
-    <div class="tab-pane fade" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-        <!-- Home -->
 
+    <!-- Home -->
+    <div class="tab-pane fade" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
         <!-- Jumbotron Text -->
         <div class="jumbotron">
             <div class="container-fluid">
@@ -156,6 +157,7 @@
         </div>
     </div>
 
+    <!-- SKills -->
     <!-- FIXME Remove show active here -->
     <div class="tab-pane fade show active" id="pills-skills" role="tabpanel" aria-labelledby="pills-Skills-tab">
         <!-- Skills -->
@@ -622,18 +624,20 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Work -->
     <div class="tab-pane fade" id="pills-work" role="tabpanel" aria-labelledby="pills-work-tab">
-        <!-- Work -->
         <!-- FIXME Correct it -->
     </div>
 
+    <!-- Projects -->
     <div class="tab-pane fade" id="pills-projects" role="tabpanel" aria-labelledby="pills-Projects-tab">
-        <!-- Projects -->
         <!-- FIXME Correct it -->
     </div>
 
+    <!-- Projects -->
     <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-projects-tab">
-        <!-- Projects -->
         <!-- FIXME Correct it -->
     </div>
 </div>
